--- a/index.html
+++ b/index.html
@@ -13,60 +13,72 @@
 </head>
 
 <body>
-    <header class="cabeçalho">
+    <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu" class="container__rotulo">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+                <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Programação</a>
+                    <a href="#" class="lista-menu__link">Drama histórico</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Front-end</a>
+                    <a href="#" class="lista-menu__link">Poema</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    <a href="#" class="lista-menu__link">Romance</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Business</a>
+                    <a href="#" class="lista-menu__link">Conto</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Design & UX</a>
+                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Suspense</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Terror</a>
                 </li>
             </ul>
             <img src="logo.png" alt="Logo da Alurabooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
-        <ul class="opções">
-            <input type="checkbox" id="opções-menu" class="opções__botão">
-            <label for="opções-menu" class="opções__rotulo">
-                <li class="opções__item">Categorias</li>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu" class="opcoes__rotulo">
+                <li class="opcoes__item">Categorias</li>
             </label>
 
             <ul class="lista-menu">
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Programação</a>
+                    <a href="#" class="lista-menu__link">Drama histórico</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Front-end</a>
+                    <a href="#" class="lista-menu__link">Poema</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    <a href="#" class="lista-menu__link">Romance</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Business</a>
+                    <a href="#" class="lista-menu__link">Conto</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Design & UX</a>
+                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Suspense</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Terror</a>
                 </li>
             </ul>
 
-            <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
         </ul>
 
         <div class="container">
@@ -104,9 +116,12 @@
                             alt="Livro sobre liderança em design da alura books"></div>
                     <div class="swiper-slide"><img src="img/Javascript.svg"
                             alt="Livro sobre javascript assertivo da alurabooks"></div>
-                    <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-                    <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-                    <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+                    <div class="swiper-slide"><img src="img/Guia Front-end.svg" 
+                            alt="Livro Guia front end"></div>
+                    <div class="swiper-slide"><img src="img/Portugol.svg" 
+                            alt="Livro sobre portugol"></div>
+                    <div class="swiper-slide"><img src="img/Acessibilidade.svg" 
+                            alt="livro sobre acessibilidade"></div>
                 </div>
 
                 <!-- If we need navigation buttons -->
@@ -116,26 +131,26 @@
 
             <div class="card">
                 <!-- 1º linha -->
-                <div class="card__descrição">
+                <div class="card__descricao">
                     <!-- 1º coluna -->
-                    <div class="descrição">
-                        <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-                        <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-                        <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                     </div>
                     <!-- 2º coluna -->
-                    <img src="img/Angular.svg" class="descrição__imagem">
+                    <img src="img/Angular.svg" class="descricao__imagem">
                 </div>
 
                 <!-- 2º linha -->
                 <div class="card__botões">
                     <!-- 1º coluna -->
-                    <ul class="botões">
-                        <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
                     </ul>
                     <!-- 2º coluna -->
-                    <a href="#" class="botões__ancora">Saiba mais</a>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
                 </div>
             </div>
         </div>
@@ -170,66 +185,65 @@
 
             <div class="card">
                 <!-- 1º linha -->
-                <div class="card__descrição">
+                <div class="card__descricao">
                     <!-- 1º coluna -->
-                    <div class="descrição">
-                        <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-                        <h3 class="descrição__titulo">Autora do Mês</h3>
-                        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-                            Front-End.
+                    <div class="descricao">
+                        <img src="img/Estrelinhas.svg" alt="Avaliacao 5 estrelas">
+                        <h3 class="descricao__titulo">Autor do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Ronaldo Sena</h2>
+                        <p class="descricao__texto">Escritor, Ronaldo é especialista em livros Suspense
                         </p>
                     </div>
                     <!-- 2º coluna -->
-                    <img src="img/Escritora.svg" class="descrição__imagem">
+                    <img src="img/Escritora.svg" class="descricao__imagem">
                 </div>
 
                 <!-- 2º linha -->
-                <div class="card__botões">
+                <div class="card__botoes">
                     <!-- 1º coluna -->
-                    <ul class="botões">
-                        <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                        <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
                     </ul>
                     <!-- 2º coluna -->
-                    <a href="#" class="botões__ancora">Saiba mais</a>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="tópicos">
-        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-        <ul class="tópicos__lista">
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Android</a>
+    <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Marketing Digital</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Agile</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Startups</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">HTML e CSS</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML e CSS</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Python</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Python</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">OO</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
             </li>
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link">Java</a>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Java</a>
             </li>
         </ul>
     </section>
 
     <section class="contato">
-        <div class="contato__descrição">
+        <div class="contato__descricao">
             <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
             <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
         </div>
