--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                 </li>
             </ul>
             <img src="logo.png" alt="Logo da Alurabooks" class="container__imagem">
-            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+            
         </div>
 
         <ul class="opcoes">
@@ -55,7 +55,13 @@
 
             <ul class="lista-menu">
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Drama histórico</a>
+                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Suspense</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Terror</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Poema</a>
@@ -64,16 +70,7 @@
                     <a href="#" class="lista-menu__link">Romance</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Conto</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Suspense</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Terror</a>
+                    <a href="#" class="lista-menu__link">Auto-ajuda</a>
                 </li>
             </ul>
 
@@ -110,18 +107,18 @@
 
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-                            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="img/Liderança.svg"
-                            alt="Livro sobre liderança em design da alura books"></div>
-                    <div class="swiper-slide"><img src="img/Javascript.svg"
-                            alt="Livro sobre javascript assertivo da alurabooks"></div>
-                    <div class="swiper-slide"><img src="img/Guia Front-end.svg" 
-                            alt="Livro Guia front end"></div>
-                    <div class="swiper-slide"><img src="img/Portugol.svg" 
-                            alt="Livro sobre portugol"></div>
-                    <div class="swiper-slide"><img src="img/Acessibilidade.svg" 
-                            alt="livro sobre acessibilidade"></div>
+                    <div class="swiper-slide"><img src="percy.jpg"
+                            alt="Livro Percy Jackson"></div>
+                    <div class="swiper-slide"><img src="caixadepassaros.jpg"
+                            alt="Livro Caixa de Passaros"></div>
+                    <div class="swiper-slide"><img src="vilarejo.jpg"
+                            alt="Livro O Vilarejo"></div>
+                    <div class="swiper-slide"><img src="eutenhoseriospoemasmentais.jpg" 
+                            alt="Livro Eu tenho sérios poemas mentais."></div>
+                    <div class="swiper-slide"><img src="ossetemaridosdevelynhugo.jpg" 
+                            alt="Livro Os sete maridos de Evelyn Hygo"></div>
+                    <div class="swiper-slide"><img src="opoderdaação.jpg" 
+                            alt="Livro O Poder da Ação"></div>
                 </div>
 
                 <!-- If we need navigation buttons -->
@@ -167,9 +164,9 @@
 
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-                            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="img/Liderança.svg"
+                    <div class="swiper-slide"><img src="abibliotecadameianoite.jpg"
+                            alt="Livro A biblioteca da meia-noite"></div>
+                    <div class="swiper-slide"><img src="enaosobrounenhum.jpg"
                             alt="Livro sobre liderança em design da alura books"></div>
                     <div class="swiper-slide"><img src="img/Javascript.svg"
                             alt="Livro sobre javascript assertivo da alurabooks"></div>
