--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Drama histórico</a>
+                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Suspense</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Terror</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Poema</a>
@@ -31,16 +37,7 @@
                     <a href="#" class="lista-menu__link">Romance</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Conto</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Ficção ciêntifica</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Suspense</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">Terror</a>
+                    <a href="#" class="lista-menu__link">Auto-ajuda</a>
                 </li>
             </ul>
             <img src="logo.png" alt="Logo da Alurabooks" class="container__imagem">
@@ -140,7 +137,7 @@
                 </div>
 
                 <!-- 2º linha -->
-                <div class="card__botões">
+                <div class="card__botoes">
                     <!-- 1º coluna -->
                     <ul class="botoes">
                         <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
@@ -168,11 +165,13 @@
                             alt="Livro A biblioteca da meia-noite"></div>
                     <div class="swiper-slide"><img src="enaosobrounenhum.jpg"
                             alt="Livro sobre liderança em design da alura books"></div>
-                    <div class="swiper-slide"><img src="img/Javascript.svg"
+                    <div class="swiper-slide"><img src="ocodigodavinci.jpg"
                             alt="Livro sobre javascript assertivo da alurabooks"></div>
-                    <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-                    <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-                    <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+                    <div class="swiper-slide"><img src="quandoninguem.jpg" 
+                            alt="Livro Guia front end"></div>
+                    <div class="swiper-slide"><img src="ohomemdegiz.jpg" 
+                            alt="Livro sobre portugol"></div>
+                    <div class="swiper-slide"><img src="mentes.jpg" alt="livro sobre acessibilidade"></div>
                 </div>
 
                 <!-- If we need navigation buttons -->
@@ -192,7 +191,7 @@
                         </p>
                     </div>
                     <!-- 2º coluna -->
-                    <img src="img/Escritora.svg" class="descricao__imagem">
+                    <img  src="Ronaldo.jpg" class="descricao__imagem">
                 </div>
 
                 <!-- 2º linha -->
@@ -213,28 +212,28 @@
         <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="topicos__lista">
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Android</a>
+                <a href="#" class="topicos__link">Estudos</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Marketing Digital</a>
+                <a href="#" class="topicos__link">Ficção Ciêntifica</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Agile</a>
+                <a href="#" class="topicos__link">Desenvolvimento Humano</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Startups</a>
+                <a href="#" class="topicos__link">Terror</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">HTML e CSS</a>
+                <a href="#" class="topicos__link">Romance</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Python</a>
+                <a href="#" class="topicos__link">Promoções</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">OO</a>
+                <a href="#" class="topicos__link">Meta de Estudos</a>
             </li>
             <li class="topicos__item">
-                <a href="#" class="topicos__link">Java</a>
+                <a href="#" class="topicos__link">Poema</a>
             </li>
         </ul>
     </section>
@@ -249,81 +248,81 @@
 
     <hr />
 
-    <footer class="rodapé">
-        <h2 class="rodapé__titulo">Grupo Alura</h2>
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Educação</li>
-            <li class="lista-rodapé__item">
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
                 <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
-                <a href="#" class="lista-rodapé__link">Casa do código</a>
+                <a href="#" class="lista-rodape__link">Casa do código</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/Caelum.svg" alt="Logo da caelum">
-                <a href="#" class="lista-rodapé__link">Caelum</a>
+                <a href="#" class="lista-rodape__link">Caelum</a>
             </li>
         </ul>
 
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Educação online</li>
-            <li class="lista-rodapé__item">
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação online</li>
+            <li class="lista-rodape__item">
                 <img src="img/Alura.svg" alt="Logo da Alura">
-                <a href="#" class="lista-rodapé__link">Alura</a>
+                <a href="#" class="lista-rodape__link">Alura</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/AluraEmpresas.svg" alt="Logo da Alura para Empresas">
-                <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
+                <a href="#" class="lista-rodape__link">Alura para Empresas</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam">
-                <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+                <a href="#" class="lista-rodape__link">Alura LATAM</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/AluraStart.svg" alt="Logo da Alura START">
-                <a href="#" class="lista-rodapé__link">Alura Start</a>
+                <a href="#" class="lista-rodape__link">Alura Start</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/MusicDot.svg" alt="Logo da Music Dot">
-                <a href="#" class="lista-rodapé__link">Music Dot</a>
+                <a href="#" class="lista-rodape__link">Music Dot</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua">
-                <a href="#" class="lista-rodapé__link">Alura Lingua</a>
+                <a href="#" class="lista-rodape__link">Alura Lingua</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/PM3.svg" alt="Logo da PM3">
-                <a href="#" class="lista-rodapé__link">PM3</a>
+                <a href="#" class="lista-rodape__link">PM3</a>
             </li>
         </ul>
 
-        <ul class="lista-rodapé">
-            <li class="lista-rodapé__titulo">Comunidade</li>
-            <li class="lista-rodapé__item">
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
                 <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech">
-                <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+                <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev">
-                <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech">
-                <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/LikeABoss.svg" alt="Logo do Like a Boss">
-                <a href="#" class="lista-rodapé__link">Like a Boss</a>
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras">
-                <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
+                <a href="#" class="lista-rodape__link">Carreira sem fronteiras</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs">
-                <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
+                <a href="#" class="lista-rodape__link">Hipsters ponto jobs</a>
             </li>
-            <li class="lista-rodapé__item">
+            <li class="lista-rodape__item">
                 <img src="img/GUJ.svg" alt="Logo do GUJ">
-                <a href="#" class="lista-rodapé__link">GUJ</a>
+                <a href="#" class="lista-rodape__link">GUJ</a>
             </li>
         </ul>
     </footer>
